Added ability for password build to adapt to user input on types of characters to be used in randomly generated password

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,6 +29,8 @@
     </div>
   </div>
   <script src="script.js"></script>
+  <!-- <script src="test/test.js"></script> -->
+  
 </body>
 
 </html>
